[tool.poetry]
name = "ita_expired_domains"
version = "0.1.0"
description = ""
authors = ["Florin Cotovanu <flc995@gmail.com>", "Emanuele Addis <ustarjem.acwazz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
search = "ita_expired_domains.main:start"